<?xml version="1.0"?>
<package format="2">
  <name>webrtc</name>
  <version>0.0.0</version>
  <description>WebRTC Native API</description>

  <maintainer email="mwills@wpi.edu">Mitchell Wills</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/webrtc</url>
  <url type="bugtracker">https://github.com/RobotWebTools/webrtc_ros/issues</url>
  <url type="repository">https://github.com/RobotWebTools/webrtc_ros</url>

  <buildtool_depend>git</buildtool_depend><!-- Needed to clone webrtc source -->
  <export>
     <build_type>cmake</build_type>
  </export>
</package>
