<?xml version="1.0"?>
<package format="2">
  <name>webrtc_ros</name>
  <version>0.0.0</version>
  <description>A collection of ROS utilities for using WebRTC with ROS</description>

  <maintainer email="mwills@wpi.edu">Mitchell Wills</maintainer>

  <license>BSD</license>

  <author email="mwills@wpi.edu">Mitchell Wills</author>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>cv_bridge</depend>
  <depend>roscpp</depend>
  <depend>webrtc</depend>
  <depend>image_transport</depend>
  <depend>nodelet</depend>
  <depend>async_web_server_cpp</depend>

  <export>
    <nodelet plugin="${prefix}/nodelet_plugins.xml" />
  </export>
</package>
